<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_listado_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.elegir.ListadoUsuario">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tblUsuario"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13" />

            <TextView
                android:text="@string/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14" />

            <TextView
                android:text="@string/celular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15" />

            <TextView
                android:text="@string/edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16" />

            <TextView
                android:text="@string/genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView17" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
