<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.elegir.Principal"
    android:background="@drawable/z">

    <TextView
        android:text="@string/iniciar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="19dp"
        android:gravity="top|bottom|left|right"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="#24292e"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/nosotros"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:id="@+id/txtNosotros"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="41dp"
        android:onClick="sobreNosotros" />

    <Button
        android:text="@string/entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEntrar"
        android:layout_marginBottom="32dp"
        android:textSize="16sp"
        android:layout_above="@+id/txtNosotros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="entrar"
        android:textColor="@android:color/background_dark"
        android:background="?attr/colorAccent" />

    <TextView
        android:text="@string/registrate"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginBottom="74dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:onClick="registrar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtContraLogin"
        android:hint="@string/contraseña"
        android:layout_marginBottom="68dp"
        android:layout_above="@+id/btnEntrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtNombreLogin"
        android:hint="@string/nombre"
        android:layout_above="@+id/txtContraLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />
</RelativeLayout>
