<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pregunta4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.elegir.Pregunta4"
    android:background="@drawable/z">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/pregunta4"
            android:layout_width="match_parent"
            android:id="@+id/textView8"
            android:textSize="30sp"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:layout_weight="0.23"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:text="@string/frio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton6"
                android:layout_weight="1"
                android:textSize="20sp"
                android:focusable="false"
                android:checked="false"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <RadioButton
                android:text="@string/templado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton5"
                android:layout_weight="1"
                android:textSize="20sp"
                android:focusable="false"
                android:checked="false"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <RadioButton
                android:text="@string/lluvioso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton4"
                android:layout_weight="1"
                android:textSize="20sp"
                android:focusable="false"
                android:checked="false"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

            <RadioButton
                android:text="@string/caliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton3"
                android:layout_weight="1"
                android:textSize="20sp"
                android:checked="false"
                android:focusable="false"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:text="@string/anterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="@android:color/black"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|italic"
                android:onClick="aPregunta3"
                android:layout_marginRight="2dp" />

            <Button
                android:text="@string/siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="@android:color/black"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|italic"
                android:onClick="aPregunta5"
                android:layout_marginLeft="2dp" />
        </LinearLayout>

        <TextView
            android:text="@string/respuestas_noobligatorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="18sp"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>
