<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pregunta6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.elegir.Pregunta6"
    android:background="@drawable/z">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/pregunta6"
            android:layout_width="match_parent"
            android:id="@+id/textView8"
            android:textSize="30sp"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:layout_weight="0.17"
            android:layout_height="wrap_content"
            android:textStyle="normal|bold" />

        <CheckBox
            android:text="@string/hombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_weight="0.17"
            android:textSize="20sp"
            android:focusable="false" />

        <CheckBox
            android:text="@string/mujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox2"
            android:layout_weight="0.17"
            android:textSize="20sp"
            android:focusable="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:text="@string/anterior"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="@android:color/black"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|italic"
                android:onClick="aPregunta5"
                android:layout_marginRight="2dp" />

            <Button
                android:text="@string/siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="@android:color/black"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|italic"
                android:onClick="aPregunta7"
                android:layout_marginLeft="2dp" />
        </LinearLayout>

        <TextView
            android:text="@string/respuestas_noobligatorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="18sp"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>
