<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nosotros"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cuc.elegir.Principal"
    android:background="@drawable/z">
    <TextView
        android:text="@string/nosotros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textStyle="normal|bold"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/lorem"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/textView10"
        android:textStyle="normal|italic"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="20sp"
        android:textAlignment="center"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/leiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textColor="?android:attr/textColorLink"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/bryan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textSize="16sp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textColor="?android:attr/textColorLink" />
</RelativeLayout>
